--- a/Views/Shared/_Acceuil.cshtml
+++ b/Views/Shared/_Acceuil.cshtml
@@ -41,7 +41,7 @@
                                         </svg>
                                     Acceuil</a></li>
                                 <li role="separator" class="divider"></li>
-                                <li><a asp-action="LogOut" asp-controller="Laboratoire"><i class="fa fa-sign-out fa-fw"></i> Logout</a></li>
+                                <li><a asp-action="LogOut" asp-controller="Structure"><i class="fa fa-sign-out fa-fw"></i> Logout</a></li>
                             </ul>
                         </li>
                     </ul>
