--- a/Views/EchangeLot/Edit.cshtml
+++ b/Views/EchangeLot/Edit.cshtml
@@ -48,6 +48,17 @@
                 </div>
             </div>
             @*fin*@
+            <div class="row mb-3">
+                <label asp-for="Type" class="col-sm-2 col-form-label">Type Echange</label>
+                <div class="col-sm-10">
+                    <select asp-for="Type" class="form-select" aria-label="Default select example">
+                        <option selected>ouvrir</option>
+                        <option value="Offre">Offre</option>
+                        <option value="Demande">Demande</option>
+                    </select>
+                    <span asp-validation-for="Type" class="text-danger"></span>
+                </div>
+            </div>
 
             <div class="row mb-3">
                 <label asp-for="DatePublication" class="col-sm-2 col-form-label"></label>
