--- a/Views/Shared/_Admin.cshtml
+++ b/Views/Shared/_Admin.cshtml
@@ -41,7 +41,7 @@
                                         <li> <a href="#" class="text-secondary m-3" style="text-decoration:none"><i class="fa fa-user fa-fw"></i> User Profile</a></li>
                                         <li> <a href="#" class="text-secondary m-3" style="text-decoration:none"><i class="fa fa-gear fa-fw"></i> Settings</a></li>
                                         <li>
-                                            <a asp-action="Acceuil" asp-controller="Laboratoire" class="text-secondary m-3" style="text-decoration:none">
+                                            <a asp-action="Acceuil" asp-controller="Structure" class="text-secondary m-3" style="text-decoration:none">
                                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-house" viewBox="0 0 16 16">
                                                     <path d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L2 8.207V13.5A1.5 1.5 0 0 0 3.5 15h9a1.5 1.5 0 0 0 1.5-1.5V8.207l.646.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.707 1.5ZM13 7.207V13.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V7.207l5-5 5 5Z" />
                                                 </svg>
@@ -50,7 +50,7 @@
                                         </li>
                                         <hr />
                                         <li class="divider"></li>
-                                        <li><a asp-action="LogOut" asp-controller="Laboratoire" class="text-secondary m-3" style="text-decoration:none"><i class="fa fa-sign-out fa-fw"></i> Logout</a></li>
+                                        <li><a asp-action="LogOut" asp-controller="Structure" class="text-secondary m-3" style="text-decoration:none"><i class="fa fa-sign-out fa-fw"></i> Logout</a></li>
                                     </ul>
                                 </li>
                             </ul>
