Setting Magement updated

--- a/Views/Structure/Inscription.cshtml
+++ b/Views/Structure/Inscription.cshtml
@@ -65,7 +65,7 @@
                     <div class="mb-1">
                         <label asp-for="Type" class="col-sm-2 col-form-label"></label>
                         <select asp-for="Type" class="form-select" aria-label="Default select example">
-                            <option selected>Open this select menu</option>
+                            <option selected>Selection une structure</option>
                             <option value="Departement" class="form-control">Departement</option>
                             <option value="Laboratoire" class="form-control">Laboratoire</option>
                         </select>
