--- a/Views/EchangeLot/Index.cshtml
+++ b/Views/EchangeLot/Index.cshtml
@@ -42,7 +42,7 @@
                 {
                     {
                         Structure LaboObject = BLL_Structure.Get(obj.IdLabo);
-                        Produit prodObject = BLLProduit.Get(obj.IdProduit);
+                        Produit prodObject = BLL_Produit.Get(obj.IdProduit);
                   
                   
                     <tr>
