--- a/wwwroot/css/Login.css
+++ b/wwwroot/css/Login.css
@@ -1,5 +1,5 @@
 ﻿body {
-    background: #e9e9e9;
+    background: #FFFFFF;
     color: #666666;
     font-family: "RobotoDraft", "Roboto", sans-serif;
     font-size: 14px;
@@ -38,7 +38,7 @@
 .form-module {
     position: relative;
     background: #ffffff;
-    max-width: 320px;
+    max-width: 520px;
     width: 100%;
     border-top: 5px solid #33b5e5;
     box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);
