--- a/Views/Structure/Index.cshtml
+++ b/Views/Structure/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@{
 
-    Layout = "_Admin";
+    Layout = "_Acceuil";
 }
 
 @model IEnumerable<ChimieProject.Models.Entities.Structure>
 <br />
 <div class="container row p-0 m-0">
     <div class="col-6">
-        <h2 class="text-info">Laboratoire List</h2>
+        <h2 class="text-info">Structures List</h2>
     </div>
     <div class="col-11 border p-3">
         <table id="DT_load" class="table table-striped table-bordered" style="width:100%">
