--- a/Views/EchangeLot/Create.cshtml
+++ b/Views/EchangeLot/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ChimieProject.Models.Entities.EchangeLot;
 @{
 
-    Layout = "_Layout";
+    Layout = "_Acceuil";
 
     var objProduitList = ViewBag.objProduitList;
 
@@ -42,11 +42,15 @@
                         @foreach (var product in @objProduitList)
                         {
                             <option value="@product.Id">@product.Nom</option>
+                            ViewBag.productName = @product.Nom;
                         }
                     </select>
                     <span asp-validation-for="IdProduit" class="text-danger"></span>
                 </div>
             </div>
+
+
+
             @*fin*@
             @*==*@
             <div class="row mb-3">
@@ -100,10 +104,45 @@
                 </div>
             </div>
             <div class="row mb-3">
-                <label asp-for="UniteQuantite " class="col-sm-2 col-form-label"></label>
+                <label asp-for="UniteQuantite" class="col-sm-2 col-form-label">L'unité de la quantité</label>
                 <div class="col-sm-10">
-                    <input asp-for="UniteQuantite " class="form-control" type="text" />    
-                    <span asp-validation-for="UniteQuantite " class="text-danger"></span>
+
+                       @foreach(var item in objProduitList){
+
+                if (item.Nom == ViewBag.productName)
+                {
+
+
+                            if (item.EtatPhysique =="LIQUIDE") {
+                            <select asp-for="UniteQuantite" class="form-select" aria-label="Default select example">
+                                <option selected>ouvrir</option>
+                                <option value="Cl">Centilitre</option>
+                                <option value="Ml">Millilitre</option>
+                                <option value="l">Litre</option>
+                            </select>
+                        }
+                        else if (item.EtatPhysique=="SOLIDE")
+                        {
+                            <select asp-for="UniteQuantite" class="form-select" aria-label="Default select example">
+                                <option selected>ouvrir</option>
+                                <option value="Cg">Centigramme</option>
+                                <option value="Mg">Milligramme</option>
+                                <option value="g">gramme</option>
+                            </select>
+                        }else if(item.EtatPhysique=="GAZEUX"){
+                            <select asp-for="UniteQuantite" class="form-select" aria-label="Default select example">
+                                <option selected>ouvrir</option>            
+                                <option value="cm³">Centimètre Cube</option>
+                                <option value="mm³">Millimètre Cube</option>
+                                <option value="m³">Mètre cube </option>
+                            </select>
+                        }
+
+                 }else{
+
+                 }
+                    }
+                    <span asp-validation-for="UniteQuantite" class="text-danger"></span>
                 </div>
             </div>
             <div class="form-group row">
@@ -120,7 +159,7 @@
     </div>
     @section Scripts{
         @{
-            <partial name="_ValidationScriptsPartial" />
+                <partial name="_ValidationScriptsPartial" />
         }
     }
 
