--- a/Views/EchangeLot/Edit.cshtml
+++ b/Views/EchangeLot/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ChimieProject.Models.Entities.EchangeLot;
 @{
 
-    Layout = "_Layout";
+    Layout = "_Acceuil";
 
     var objProduitList = ViewBag.objProduitList;
 
@@ -9,7 +9,7 @@
 }
 <partial name="_Notification">
     <div class="border container" style="padding:30px;">
-        <form method="post" asp-action="Create" asp-controller="EchangeLot">
+        <form method="post" asp-action="Edit" asp-controller="EchangeLot">
             <div class="text-danger" asp-validation-summary="ModelOnly"></div>
 
             <div class="row pb-2">
