--- a/Views/_UpsertPartialView.cshtml
+++ b/Views/_UpsertPartialView.cshtml
@@ -3,7 +3,7 @@
 <div class="pen-title"></div>
     <partial name="_Notification">
     <div class="border container" style="padding:30px;">
-        <form method="post" asp-action="Create" asp-controller="EchangeLot">
+        <form method="post" asp-action="CreateNewStructure" asp-controller="Structure">
             <div class="text-danger" asp-validation-summary="ModelOnly"></div>
 
             <div class="row pb-2">
@@ -83,7 +83,7 @@
                 <label asp-for="Statut" class="col-sm-2 col-form-label"></label>
                 <div class="col-sm-10">
 
-                    <input value="Actif" class="form-control">
+                    <input value="Actif" class="form-control" disabled>
                    
                     <span asp-validation-for="Role" class="text-danger"></span>
                 </div>
@@ -106,6 +106,10 @@
               <input asp-for="Password" class="form-control" type="password" />
               <span asp-validation-for="Password" class="text-danger"></span>
                 </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="submit" class="btn btn-primary">Ajouter</button>
             </div>
         </form>
     </div>
