CRUD Publication updated

--- a/Views/Dashboard/Acceuil.cshtml
+++ b/Views/Dashboard/Acceuil.cshtml
@@ -4,7 +4,7 @@
 @{
     Layout = "_UserUI";
 }
-@model IEnumerable<ChimieProject.Models.Entities.EchangeLot>
+@model IEnumerable<ChimieProject.Models.Entities.Publication>
 <!DOCTYPE html>
 <html lang="en">
 
