--- a/Views/Publication/Edit.cshtml
+++ b/Views/Publication/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model ChimieProject.Models.Entities.EchangeLot;
+﻿@model ChimieProject.Models.Entities.Publication;
 @{
 
     Layout = "_Acceuil";
@@ -7,13 +7,12 @@
 
     var objLaboratoireList = ViewBag.objLaboratoireList;
 }
-<partial name="_Notification">
-    <div class="border container" style="padding:30px;">
-        <form method="post" asp-action="Create" asp-controller="EchangeLot">
-            <div class="text-danger" asp-validation-summary="ModelOnly"></div>
 
+    <div class="border container" style="padding:30px;">
+        <form method="post" asp-action="Edit" asp-controller="Publication">
+            <div class="text-danger" asp-validation-summary="ModelOnly"></div>
             <div class="row pb-2">
-                <h2 class="text-primary">Create</h2>
+                <h2 class="text-primary">Edit</h2>
                 <hr />
             </div>
 
@@ -25,7 +24,7 @@
                         <option selected>ouvrir ce menu de sélection</option>
                         @foreach (var lab in @objLaboratoireList)
                         {
-                          <option value="@lab.Id">@lab.Nom</option>
+                            <option value="@lab.Id">@lab.Nom</option>
                         }
                     </select>
                     <span asp-validation-for="IdLabo" class="text-danger"></span>
@@ -42,49 +41,43 @@
                         @foreach (var product in @objProduitList)
                         {
                             <option value="@product.Id">@product.Nom</option>
-                            ViewBag.productName = @product.Nom;
                         }
                     </select>
                     <span asp-validation-for="IdProduit" class="text-danger"></span>
                 </div>
             </div>
-
-
-
             @*fin*@
-            @*==*@
             <div class="row mb-3">
                 <label asp-for="Type" class="col-sm-2 col-form-label">Type Echange</label>
                 <div class="col-sm-10">
                     <select asp-for="Type" class="form-select" aria-label="Default select example">
-                        <option selected>ouvrir</option>                    
-                            <option value="Offre">Offre</option>
-                            <option value="Demande">Demande</option>                  
+                        <option selected>ouvrir</option>
+                        <option value="Offre">Offre</option>
+                        <option value="Demande">Demande</option>
                     </select>
                     <span asp-validation-for="Type" class="text-danger"></span>
                 </div>
             </div>
-            @*==*@
 
             <div class="row mb-3">
                 <label asp-for="DatePublication" class="col-sm-2 col-form-label"></label>
 
                 <div class="col-sm-10">
-                    <input asp-for="DatePublication" class="form-control" type="date"/>
+                    <input asp-for="DatePublication" class="form-control" type="date" />
                     <span asp-validation-for="DatePublication" class="text-danger"></span>
                 </div>
             </div>
             <div class="row mb-3">
                 <label asp-for="Purete" class="col-sm-2 col-form-label"></label>
                 <div class="col-sm-10">
-                    <input asp-for="Purete" class="form-control" type="text"/>
+                    <input asp-for="Purete" class="form-control" type="text" />
                     <span asp-validation-for="Purete" class="text-danger"></span>
                 </div>
-            </div>  
+            </div>
             <div class="row mb-3">
                 <label asp-for="Concentration" class="col-sm-2 col-form-label"></label>
                 <div class="col-sm-10">
-                    <input asp-for="Concentration" class="form-control" type="text"/>
+                    <input asp-for="Concentration" class="form-control" type="text" />
                     <span asp-validation-for="Concentration" class="text-danger"></span>
                 </div>
             </div>
@@ -96,70 +89,45 @@
                     <span asp-validation-for="DatePeremption " class="text-danger"></span>
                 </div>
             </div>
-           <div class="row mb-3">
+            <div class="row mb-3">
                 <label asp-for="Quantite " class="col-sm-2 col-form-label"></label>
                 <div class="col-sm-10">
-                    <input asp-for="Quantite " class="form-control" type="number" />                  
+                    <input asp-for="Quantite " class="form-control" type="number" />
                     <span asp-validation-for="Quantite " class="text-danger"></span>
                 </div>
             </div>
             <div class="row mb-3">
-                <label asp-for="UniteQuantite" class="col-sm-2 col-form-label">L'unité de la quantité</label>
+                <label asp-for="UniteQuantite " class="col-sm-2 col-form-label"></label>
                 <div class="col-sm-10">
 
-                       @foreach(var item in objProduitList){
-
-                if (item.Nom == ViewBag.productName)
-                {
-
-
-                            if (item.EtatPhysique =="LIQUIDE") {
-                            <select asp-for="UniteQuantite" class="form-select" aria-label="Default select example">
-                                <option selected>ouvrir</option>
-                                <option value="Cl">Centilitre</option>
-                                <option value="Ml">Millilitre</option>
-                                <option value="l">Litre</option>
-                            </select>
-                        }
-                        else if (item.EtatPhysique=="SOLIDE")
-                        {
-                            <select asp-for="UniteQuantite" class="form-select" aria-label="Default select example">
-                                <option selected>ouvrir</option>
-                                <option value="Cg">Centigramme</option>
-                                <option value="Mg">Milligramme</option>
-                                <option value="g">gramme</option>
-                            </select>
-                        }else if(item.EtatPhysique=="GAZEUX"){
-                            <select asp-for="UniteQuantite" class="form-select" aria-label="Default select example">
-                                <option selected>ouvrir</option>            
-                                <option value="cm³">Centimètre Cube</option>
-                                <option value="mm³">Millimètre Cube</option>
-                                <option value="m³">Mètre cube </option>
-                            </select>
-                        }
-
-                 }else{
-
-                 }
-                    }
-                    <span asp-validation-for="UniteQuantite" class="text-danger"></span>
+                    @*=========*===========================[Modified this after]=====================================================================*@
+   
+                                <select asp-for="UniteQuantite" class="form-select" aria-label="Default select example">
+                                    <option selected>ouvrir</option>
+                                    <option value="Cl">Centilitre</option>
+                                    <option value="Ml">Millilitre</option>
+                                    <option value="l">Litre</option>
+                                </select>
+                       
+                         <span asp-validation-for="UniteQuantite" class="text-danger"></span>
+                    @*=========*===========================[Modified this after]=====================================================================*@
                 </div>
             </div>
             <div class="form-group row">
                 <div class="col-3 offset-3">
                     <button type="submit" class="btn btn-primary form-control">
-                        Créer
+                        Modifier
                     </button>
                 </div>
                 <div class="col-3">
-                    <a asp-action="Index" asp-controller="EchangeLot" class="btn btn-success form-control">Retour a la Liste</a>
+                    <a asp-action="Index" asp-controller="Publication" class="btn btn-success form-control">Retour a la Liste</a>
                 </div>
             </div>
         </form>
     </div>
     @section Scripts{
         @{
-                <partial name="_ValidationScriptsPartial" />
+            <partial name="_ValidationScriptsPartial" />
         }
     }
 
