--- a/Views/Publication/Index.cshtml
+++ b/Views/Publication/Index.cshtml
@@ -2,18 +2,17 @@
 @using ChimieProject.Models.Entities
 @using System.Collections
 @{
-
+    var objEchangeLotList = ViewBag.objEchangeLotList;
     Layout = "_Acceuil";
+
+    ViewBag.List = null;
 }
 
-@model IEnumerable<EchangeLot>;
+@*//@model IEnumerable<EchangeLot>;*@
 
 <br />
-@*--[Call Partial view Notification]--*@
-<partial name="_Notification">
 
     <div class="pub-manager">
-
         <!---- HEADER (SEARCH)---->
         <div class="pub-header">
             <h1>Publication Manager</h1>
@@ -143,7 +142,7 @@
 
 
             <div class="pub-listing--results">
-                @foreach (var pub in Model)
+                @foreach (var item in objEchangeLotList)
                 {
                     <div class="publication">
                         <div class="publication--flag flag__public">Public</div>
@@ -161,9 +160,9 @@
                             </div>
                         </div>
                         <div class="publication--options">
-                            <div class="publication--date">published: @pub.DatePublication</div>
-                            <button class="button button__primary button__edit">Edit Post</button>
-                            <button class="button button__delete">Delete</button>
+                            <div class="publication--date">published: @item.DatePublication</div>
+                            <a class="button button__primary button__edit" style="text-decoration:none" asp-action="Edit" asp-controller="Publication" asp-route-id="@item.Id">Edit Post</a>
+                            <button class="button button__delete" onclick="return Delete(@item.Id)">Delete</button>
                         </div>
                     </div>
                 }
@@ -246,15 +245,16 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title text-primary" id="exampleModalLabel">Ajouter un publication</h5>
+                    <h2 class="modal-title text-primary" id="exampleModalLabel">Ajouter un publication</h2>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-                <div class="modal-body">
-                    @foreach (var item in Model)
-                    {
+                <div class="modal-body" id="modalIdDiv1">
+
                         @*Inject my partial View  | _UpsertPartialView |*@
-                        <partial name="~/Views/EchangeLot/_PublicationPartialView.cshtml" model="item" ; />
-                    }
+                    <partial name="~/Views/Publication/_PublicationPartialView.cshtml"/>
+                   
+                      
+                  
                     
                 </div>
 
@@ -262,4 +262,44 @@
         </div>
     </div>
     <!-- End Modal -->
+    @section Scripts{
+        @{
+            <partial name="_ValidationScriptsPartial" />
+        }
+        <script type="text/javascript">
+
+            //Delete Publication
+            function Delete(id) {
+                Swal.fire({
+                    title: 'êtes vous sûr?',
+                    text: "voulez vous supprimer cette publication!",
+                    icon: 'warning',
+                    showCancelButton: true,
+                    confirmButtonColor: '#3085d6',
+                    cancelButtonColor: '#d33',
+                    confirmButtonText: 'Oui, Supprimer!'
+                }).then((result) => {
+                    if (result.isConfirmed) {
+                        $.ajax({
+                            type: "DELETE",
+                            url: "/Publication/Delete",
+                            data: { id: id },
+                            success: function (data) {
+                                if (data.success) {
+                                    alert(data.message)
+                                    location.reload();
+                                }
+                                else {
+                                    alert(data.message);
+                                }
+                            }
+                        });
+
+                    }
+                })
+            }
+
+
+        </script>
+    }
 
