--- a/Views/Publication/_PublicationPartialView.cshtml
+++ b/Views/Publication/_PublicationPartialView.cshtml
@@ -1,5 +1,5 @@
 ﻿@Html.AntiForgeryToken()
-@model ChimieProject.Models.Entities.EchangeLot;
+@model ChimieProject.Models.Entities.Publication;
 
 @{
 
@@ -9,15 +9,12 @@
 
     var objLaboratoireList = ViewBag.objLaboratoireList;
 }
+
+
+<partial name="_Notification">
 <div>
-    <form method="post" asp-action="Create" asp-controller="EchangeLot">
+    <form method="post" asp-action="Create" asp-controller="Publication">
         <div class="text-danger" asp-validation-summary="ModelOnly"></div>
-
-        <div class="row pb-2">
-            <h2 class="text-primary">Create</h2>
-            <hr />
-        </div>
-
         @*Labo Liste*@
         <div class="row mb-3">
             <label asp-for="IdLabo" class="col-sm-2 col-form-label">Non du Labratoire</label>
@@ -108,48 +105,18 @@
             <label asp-for="UniteQuantite" class="col-sm-2 col-form-label">L'unité de la quantité</label>
             <div class="col-sm-10">
 
-                @foreach (var item in objProduitList)
-                {
+@*=========*===========================[Modified this after]=====================================================================*@
 
-                    if (item.Nom == ViewBag.productName)
-                    {
-
-
-                        if (item.EtatPhysique == "LIQUIDE")
-                        {
+               
                             <select asp-for="UniteQuantite" class="form-select" aria-label="Default select example">
                                 <option selected>ouvrir</option>
                                 <option value="Cl">Centilitre</option>
                                 <option value="Ml">Millilitre</option>
                                 <option value="l">Litre</option>
                             </select>
-                        }
-                        else if (item.EtatPhysique == "SOLIDE")
-                        {
-                            <select asp-for="UniteQuantite" class="form-select" aria-label="Default select example">
-                                <option selected>ouvrir</option>
-                                <option value="Cg">Centigramme</option>
-                                <option value="Mg">Milligramme</option>
-                                <option value="g">gramme</option>
-                            </select>
-                        }
-                        else if (item.EtatPhysique == "GAZEUX")
-                        {
-                            <select asp-for="UniteQuantite" class="form-select" aria-label="Default select example">
-                                <option selected>ouvrir</option>
-                                <option value="cm³">Centimètre Cube</option>
-                                <option value="mm³">Millimètre Cube</option>
-                                <option value="m³">Mètre cube </option>
-                            </select>
-                        }
-
-                    }
-                    else
-                    {
-
-                    }
-                }
+ 
                 <span asp-validation-for="UniteQuantite" class="text-danger"></span>
+@*=========*===========================[Modified this after]=====================================================================*@
             </div>
         </div>
         <div class="form-group row">
@@ -159,7 +126,7 @@
                 </button>
             </div>
             <div class="col-3">
-                <a asp-action="Index" asp-controller="EchangeLot" class="btn btn-success form-control">Retour</a>
+                <a asp-action="Index" asp-controller="Publication" class="btn btn-success form-control">Retour</a>
             </div>
         </div>
     </form>
