--- a/Views/Structure/Acceuil.cshtml
+++ b/Views/Structure/Acceuil.cshtml
@@ -15,6 +15,7 @@
 
 </head>
 <body class="sb-nav-fixed">
+    @*navBar*@
     <div id="layoutSidenav">
         <div id="layoutSidenav_nav">
             <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
@@ -97,7 +98,7 @@
                             <div class="card bg-primary text-white mb-4">
                                 <div class="card-body">Gestion Publication</div>
                                 <div class="card-footer d-flex align-items-center justify-content-between">
-                                    <a class="small text-white stretched-link" asp-action="Index" asp-controller="EchangeLot">View Details</a>
+                                    <a class="small text-white stretched-link" asp-action="Index" asp-controller="Publication">View Details</a>
                                     <div class="small text-white"><i class="fas fa-angle-right"></i></div>
                                 </div>
                             </div>
