--- a/Views/Structure/Acceuil.cshtml
+++ b/Views/Structure/Acceuil.cshtml
@@ -90,7 +90,7 @@
             <main>
                 <div class="container-fluid px-4">
                     <h1 class="mt-4">Dashboard</h1>
-                    <h1 class="mt-0 fa-pull-right">BacKup</h1>
+                    <h1 class="">BacKup</h1>
                     <ol class="breadcrumb mb-4">
                         <li class="breadcrumb-item active">Dashboard</li>
                     </ol>
