--- a/Views/_UpsertPartialView.cshtml
+++ b/Views/_UpsertPartialView.cshtml
@@ -113,5 +113,10 @@
             </div>
         </form>
     </div>
-
+     @section Scripts{
+        @{
+            <partial name="_ValidationScriptsPartial" />
+            <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+        }
+     }
 
