--- a/Views/Structure/Index.cshtml
+++ b/Views/Structure/Index.cshtml
@@ -37,7 +37,7 @@
                         @if (obj.Statut != 1)
                         {
                             <td width="20%" class="text-danger">
-                                <strong>Demande</strong>
+                                <strong class="badge bg-danger">Demande</strong>
                             </td>
 
                             <td width="50">
@@ -55,7 +55,7 @@
                         else if(obj.Role=="Admin")
                         {
                             <td width="20%" class="text-success">
-                                <strong>Actif</strong>
+                                <strong class="badge bg-success">Actif</strong>
                             </td>
 
                             <td width="50">
@@ -65,7 +65,7 @@
                             </td>
                         }else{
                             <td width="20%" class="text-success">
-                                <strong>Actif</strong>
+                                <strong class="badge bg-success">Actif</strong>
                             </td>
 
                             <td width="50">
