--- a/Views/Produit/Index.cshtml
+++ b/Views/Produit/Index.cshtml
@@ -2,13 +2,12 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
+    //Layout = "_UserUI";
 }
 
 <div>
     <button type="button" class="btn btn-primary" style="float:right" onclick="afficherModalRecherche()"><i class="bi bi-search"></i></button>
-    
-
-
+  
 </div>
 <br />
 <br/>
